# uzbek-translit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/uzbek_translit/: __init__.py  __main__.py  api.py  transliterate.py
tests/: conftest.py  test_api.py  test_transliterate.py
